# HomeWork

./: README.md  mod2_les1_task1.cpp  mod2_les1_task1.sln  mod2_les1_task1.vcxproj  mod2_les1_task1.vcxproj.filters  mod2_les1_task2.cpp  mod2_les1_task2.sln  mod2_les1_task2.vcxproj  mod2_les1_task2.vcxproj.filters  mod2_les1_task3.cpp  mod2_les1_task3.sln  mod2_les1_task3.vcxproj  mod2_les1_task3.vcxproj.filters  mod2_les2_task1.cpp  mod2_les2_task1.sln  mod2_les2_task1.vcxproj  mod2_les2_task1.vcxproj.filters  mod2_les2_task2.cpp  mod2_les2_task2.sln  mod2_les2_task2.vcxproj  mod2_les2_task2.vcxproj.filters  mod2_les3_task1.cpp  mod2_les3_task1.vcxproj  mod2_les3_task2.cpp  mod2_les3_task2.sln  mod2_les4_task1.cpp  mod2_les4_task1.sln  mod2_les4_task1.vcxproj  mod2_les4_task1.vcxproj.filters  mod2_les4_task2.cpp  mod2_les4_task2.sln  mod2_les4_task2.vcxproj  mod2_les4_task2.vcxproj.filters  mod2_les4_task3.cpp  mod2_les4_task3.sln  mod2_les4_task3.vcxproj  mod2_les4_task3.vcxproj.filters  task.cpp
CMake/Проект посложнее/: CMakeLists.txt  quadrilateral.cpp
mod2_les5_task1/: calc.cpp  calc.h  mod2_les5_task1.cpp  mod2_les5_task1.sln  mod2_les5_task1.vcxproj  mod2_les5_task1.vcxproj.filters
mod2_les5_task2/: calc.cpp  calc.h  mod2_les5_task2.cpp  (+3 more)
Итоговая работа «Симулятор гонок»/: CMakeLists.txt  airTransport.cpp  airTransport.h  boots.cpp  boots.h  broom.cpp  broom.h  camel.cpp  camel.h  camelSpeed.cpp  camelSpeed.h  carpet.cpp  carpet.h  centaur.cpp  centaur.h  eagle.cpp  eagle.h  error.cpp  error.h  landTransport.h  main.cpp  project_api.h  track.cpp  track.h  transport.cpp  transport.h
Сборка и подключение библиотек/Задание 5. Иерархия классов в DLL и CMake/: CMakeLists.txt  rhomb.cpp  shape.cpp  shape.h  triangleRightAngled.cpp
(+149 files in other folders)
